; ModuleID = '/home/carl/AnghaBench/zfs/module/icp/io/extr_skein_mod.c_skein_free_context.c'
source_filename = "/home/carl/AnghaBench/zfs/module/icp/io/extr_skein_mod.c_skein_free_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPTO_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @skein_free_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skein_free_context(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @SKEIN_CTX(i32* %4)
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @SKEIN_CTX(i32* %8)
  %10 = call i32 @bzero(i32* %9, i32 4)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32* @SKEIN_CTX(i32* %11)
  %13 = call i32 @kmem_free(i32* %12, i32 4)
  store i32* null, i32** %3, align 8
  br label %14

14:                                               ; preds = %7, %1
  %15 = load i32, i32* @CRYPTO_SUCCESS, align 4
  ret i32 %15
}

declare dso_local i32* @SKEIN_CTX(i32*) #1

declare dso_local i32 @bzero(i32*, i32) #1

declare dso_local i32 @kmem_free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
